--- a/TPC4/tasks.json
+++ b/TPC4/tasks.json
@@ -23,29 +23,33 @@
     {
       "name": "Jorge Jesus",
       "id": "6"
+    },
+    {
+      "name": "Rui Capel",
+      "id": "7"
     }
   ],
   "tasks": [
-    {
-      "id": "1",
-      "duedate": "2023-06-15",
-      "who": "Jorge Jesus",
-      "what": "Treinar o Brasil",
-      "done": false
-    },
-    {
-      "duedate": "2026-06-17",
-      "who": "António Campos",
-      "what": "Ir a Paris",
-      "done": false,
-      "id": "2"
-    },
     {
       "duedate": "2023-06-16",
       "who": "João Pedro",
       "what": "Tirar 20 no Teste",
       "done": true,
       "id": "3"
+    },
+    {
+      "id": "4",
+      "duedate": "2023-03-17",
+      "who": "Rui Capel",
+      "what": "Calhar o United no sorteio",
+      "done": false
+    },
+    {
+      "duedate": "2024-04-17",
+      "who": "António Campos",
+      "what": "Ir à Lua",
+      "done": false,
+      "id": "6"
     }
   ]
 }
